Updated the containers and imported the Utils

--- a/styles/header.less
+++ b/styles/header.less
@@ -1,7 +1,8 @@
 .header {
-  min-height: 40px;
+  min-height: 65px;
   -webkit-app-region: drag;
   -webkit-user-select: none;
+  background-color: #F3F3F3;
 
   &.bordered {
     border-bottom: 1px solid @color-divider;
