--- a/styles/left-panel.less
+++ b/styles/left-panel.less
@@ -1,7 +1,7 @@
 /* Sidebar */
 
 .sidebar {
-  background-color: white;
+  background-color: @gray-lighter;
   margin: 0;
   border-right: 1px solid @color-divider;
   display: flex;
