--- a/styles/variables.less
+++ b/styles/variables.less
@@ -19,6 +19,9 @@
 @gray-lighter:          #c4cdda;
 @gray-lightest:         #e6edf4;
 
+@gray-light:    #F3F3F3;
+@gray-lighter:  #F5F5F5;
+
 @color-divider:         @gray-lightest;
 @color-box-button:      lighten(@gray-lightest, 5%);
 @color-background:      lighten(@gray-lightest, 4.5%);
@@ -28,7 +31,7 @@
 
 @border-radius:         0.2rem;
 
-@sidebar-width:                   220px;
+@sidebar-width:                   320px;
 @sidebar-text-overflow-width:     140px;
 
 @container-state-size:        20px;
