Fixed React package.json and got popover working

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -15,7 +15,7 @@
 @gray-darkest:          #233137;
 @gray-darker:           #3f5167;
 @gray-normal:           #556473;
-@gray-light:            #7a8491;
+//@gray-light:            #7a8491;
 @gray-lighter:          #c4cdda;
 @gray-lightest:         #e6edf4;
 
