--- a/styles/header.less
+++ b/styles/header.less
@@ -2,7 +2,7 @@
   min-height: 65px;
   -webkit-app-region: drag;
   -webkit-user-select: none;
-  background-color: #F3F3F3;
+  background-color: @gray-light;
 
   &.bordered {
     border-bottom: 1px solid @color-divider;
@@ -26,34 +26,6 @@
     flex: 1 0;
   }
 
-  .bubble {
-    display: block;
-    position: absolute;
-    width: 450px;
-    height: 150px;
-    padding: 0;
-    background: #FFFFFF;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 1px;
-    z-index: 1;
-    top: 52px;
-    left: -15px;
-  }
-
-  .bubble:after {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 0 15px 17px;
-    border-color: #FFFFFF transparent;
-    display: block;
-    width: 0;
-    z-index: 1;
-    top: -17px;
-    left: 12px;
-  }
-
   .repo-add {
     padding: 15px;
   }
@@ -61,8 +33,22 @@
   .repo-add-plus {
     position: relative;
     display: inline-block;
-    background-color: inherit;
+    background-color: @gray-light;
     font-size: 1.5em;
     text-align: center;
+    color: @gray-normal;
   }
+
+  .gray-normal {
+    background-color: @gray-normal;
+  }
+
 }
+
+.bubble:extend(.popover-content) {
+  width: 200px;
+  height: 200px;
+  color: black;
+}
+
+
