--- a/styles/main.less
+++ b/styles/main.less
@@ -1,17 +1,20 @@
 @import "bootstrap/bootstrap.less";
 @import "variables.less";
 @import "mixins.less";
-@import "theme.less";
-@import "icons.less";
-@import "retina.less";
-@import "setup.less";
-@import "radial.less";
-@import "preferences.less";
 @import "header.less";
 @import "layout.less";
 @import "left-panel.less";
 @import "right-panel.less";
 @import "new-container.less";
+@import "retina.less";
+@import "theme.less";
+@import "icons.less";
+
+@import "setup.less";
+@import "radial.less";
+@import "preferences.less";
+
+
 @import "container-home.less";
 @import "container-logs.less";
 @import "container-settings.less";
@@ -39,4 +42,5 @@ html, body {
 
 .main-container {
   height: 100%;
+  background-color: #f3f3f3;
 }
