--- a/styles/variables.less
+++ b/styles/variables.less
@@ -12,6 +12,8 @@
 @traffic-light-gray:              #E5E5E5;
 @traffic-light-gray-border:       #D3D3D3;
 
+@navy-blue: #006DF9;
+
 @gray-darkest:          #233137;
 @gray-darker:           #3f5167;
 @gray-normal:           #556473;
