--- a/styles/header.less
+++ b/styles/header.less
@@ -2,7 +2,6 @@
   min-height: 65px;
   -webkit-app-region: drag;
   -webkit-user-select: none;
-  background-color: @gray-light;
 
   &.bordered {
     border-bottom: 1px solid @color-divider;
@@ -33,8 +32,7 @@
   .repo-add-plus {
     position: relative;
     display: inline-block;
-    background-color: @gray-light;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-align: center;
     color: @gray-normal;
   }
@@ -50,31 +48,38 @@
     -moz-border-radius: 10px;
     border-radius: 1px;
     z-index: 1;
-    top: 52px;
-    left: -15px;
+    top: 33px;
+    left: -18px;
   }
 
   .bubble:after {
     content: '';
     position: absolute;
     border-style: solid;
-    border-width: 0 15px 17px;
+    border-width: 0 10px 10px;
     border-color: #FFFFFF transparent;
     display: block;
     width: 0;
     z-index: 1;
-    top: -17px;
-    left: 12px;
+    top: -10px;
+    left: 16px;
   }
 
   .gray-normal {
     background-color: @gray-normal;
   }
 
-  .repo-add-header {
+  .repo-add-header, .repo-add-container {
     border-bottom: @gray-lightest solid 1px;
     padding-bottom: 10px;
     padding-top: 10px;
+    .repo-add-container {
+      height: 60px;
+      text-align: left;
+      font-size: 0.8em;
+      padding-left: 10px;
+
+    }
   }
 
   .repo-add-header-btn {
@@ -86,14 +91,14 @@
     text-transform: none;
   }
 
-  .btn-default.active, .btn-default:active, .btn-default:hover, .open>.dropdown-toggle.btn-default, .btn-default:focus, .btn-default.focus, .btn-default:hover {
+  .btn-default.active, .btn-default:active, .btn-default:hover, .open > .dropdown-toggle.btn-default, .btn-default:focus, .btn-default.focus, .btn-default:hover {
     background-color: @navy-blue !important;
     color: white !important;
   }
 
   .bubble:extend(.popover-content) {
-    width: 500px;
-    height: 200px;
+    width: 475px;
+    height: 155px;
     color: black;
   }
 
