--- a/styles/left-panel.less
+++ b/styles/left-panel.less
@@ -14,7 +14,7 @@
   -webkit-user-select: none;
   background-color: #1d1f21;
 
-  .list-group {
+  .repo-list-tree {
     opacity: 1;
     box-shadow: inset -3px 0 0 rgba(0, 0, 0, 0.05);
     font-size: 11px;
@@ -28,7 +28,7 @@
     list-style: none;
     cursor: default;
 
-    .list-group-item {
+    li.repo-list-tree-item {
       padding-left: 17px;
       margin-left: 17px;
       font-weight: normal;
@@ -46,7 +46,6 @@
         background-color: @list-group-item-selected;
       }
     }
-
 
   }
 }
