--- a/styles/left-panel.less
+++ b/styles/left-panel.less
@@ -28,8 +28,11 @@
     list-style: none;
     cursor: default;
 
-    li.repo-list-tree-item {
+    > li {
       padding-left: 17px;
+    }
+
+    li.repo-list-tree-item {
       margin-left: 17px;
       font-weight: normal;
       color: #aaaaaa;
@@ -45,7 +48,14 @@
         text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
         background-color: @list-group-item-selected;
       }
-    }
 
+
+    }
   }
+
+  .repo-list-tree .selected:before {
+    background: @list-group-item-selected;
+    box-shadow: inset -3px 0 0 rgba(0, 0, 0, 0.05);
+  }
+
 }
